--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wifi Boosters</title>
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
@@ -435,8 +436,8 @@
 
     <div class="container-fluid py-4" style="background-image: url('./assets/images/bg-goodbye-sec.png'); background-size: cover">
       <div class="row flex-column-reverse flex-md-row">
-        <div class="col-8 col-md-5">
-          <img src="./assets/images/device-side.png" alt="" class="w-100" />
+        <div class="col-12 col-md-5 text-center text-md-end">
+          <img src="./assets/images/device-side.png" alt="" class="w-100" style="max-width: 450px" />
         </div>
         <div class="col-12 col-sm-12 col-md-6 text-white fw-bold">
           <h2 class="fw-bold mb-4">EXTEND YOUR WI-FI RANGE FARTHER THAN EVER BEFORE!</h2>
@@ -451,7 +452,7 @@
 
           <p>Receive up to 50% OFF your order when you purchase today!</p>
 
-          <button class="buy-button btn">YES, I WANT RANGEXTD TODAY ></button>
+          <button class="buy-button btn" style="max-width: 650px">YES, I WANT RANGEXTD TODAY ></button>
         </div>
       </div>
     </div>
